[tool.poetry]
name = "rt-monitor"
version = "0.1.0"
description = "This project contains an implementation of a Runtime Monitoring tool (RM). The rationale behind this tool is that it provides runtime verification capabilities provided it is given: 1. an analysis framework specification, and 2. an event reports map file containing: a. a reference to the **main** event report file, and b. references to the event report files of the self-loggable components declared in the analysis framework specification."
authors = ["Carlos Gustavo Lopez Pombo <clpombo@gmail.com>"]
readme = "README.md"
license = "GNU AFFERO GENERAL PUBLIC LICENSE Version 3, 19 November 2007"
#homepage = "https://example.com/my-awesome-project"
repository = "https://github.com/invap/rt-monitor"
#documentation = "https://example.com/docs"

[[tool.poetry.packages]]
include = "rt-monitor"
from = "./"

[tool.poetry.dependencies]
black =">=24.10.0,<24.11.0"
python = ">=3.12"
pyobjc-core =">=10.3.1,<10.4.0"
pyobjc-framework-applicationservices =">=10.3.1,<10.4.0"
pyobjc-framework-cocoa =">=10.3.1,<10.4.0"
pyobjc-framework-coretext =">=10.3.1,<10.4.0"
pyobjc-framework-quartz =">=10.3.1,<10.4.0"
pip =">=24.3.1,<24.4.0"
pynput =">=1.7.7,<1.8.0"
setuptools =">=75.3.0,<75.4.0"
six =">=1.16.0,<1.17.0"
wxpython =">=4.2.2,<4.3.0"
twine =">=5.1.1,<5.2.0"
boto ="~=2.49.0"
igraph ="~=0.11.6"
mpmath ="~=1.3.0"
numpy = "~=2.1.2"
sympy = "~=1.13.3"
texttable = "~=1.7.0"
toml = "~=0.10.2"
z3-solver = "~=4.13.0.0"

