[project]
name = "rt-monitor"
version = "2.6.2"
description = "This project contains an implementation of a Runtime Monitoring tool (RM). The rationale behind this tool is that it provides runtime verification capabilities provided it is given: 1. an analysis framework specification, and 2. an event reports map file containing: a. a reference to the **main** event report file, and b. references to the event report files of the self-loggable components declared in the analysis framework specification."
authors = [
    {name = "Carlos Gustavo Lopez Pombo", email = "clpombo@gmail.com>"}
]
readme = "README.md"
license = "GNU AFFERO GENERAL PUBLIC LICENSE Version 3, 19 November 2007"
repository = "https://github.com/invap/rt-monitor"
requires-python = ">=3.11,<4.0"
packages = [
    { include = "rt_monitor" },
]
dependencies = [
    "black (>=24.10.0,<24.11.0)",
    "colorama (>=0.4.6)",
    "pyformlang~=1.0.11",
    "pyobjc-core (>=10.3.1,<10.4.0); sys_platform == 'darwin'",
    "pyobjc-framework-applicationservices (>=10.3.1,<10.4.0); sys_platform == 'darwin'",
    "pyobjc-framework-cocoa (>=10.3.1,<10.4.0); sys_platform == 'darwin'",
    "pyobjc-framework-coretext (>=10.3.1,<10.4.0); sys_platform == 'darwin'",
    "pyobjc-framework-quartz (>=10.3.1,<10.4.0); sys_platform == 'darwin'",
    "pika (>=1.3.2)",
    "pip (>=25.1.1,<25.2.0)",
    "pynput (>=1.7.7,<1.8.0)",
    "setuptools (>=75.3.0,<75.4.0)",
    "six (>=1.16.0,<1.17.0)",
    "wxpython (>=4.2.2,<4.3.0); sys_platform == 'darwin'",
    "wxpython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-24.04/wxPython-4.2.2-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "twine (>=5.1.1,<5.2.0)",
    "boto (~=2.49.0)",
    "igraph (~=0.11.6)",
    "mpmath (~=1.3.0)",
    "numpy (~=2.1.2)",
    "sympy (~=1.13.3)",
    "texttable (~=1.7.0)",
    "toml (~=0.10.2)",
    "z3-solver (~=4.13.0.0)",
    "rt-rabbitmq-wrapper @ git+https://github.com/invap/rt-rabbitmq-wrapper.git@v2.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
